k8s/ssl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blostemiq-ingress
  namespace: blostemiq
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - blostemiq.myddns.me
      secretName: blostemiq-tls
  rules:
    - host: blostemiq.myddns.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
